# tf-dlpack

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  setup.py
.pytest_cache/v/cache/: nodeids
cmake/util/: FindCUDA.cmake
docker/: Dockerfile.ci  Dockerfile.cpu  Dockerfile.gpu  build_docker.sh
docker/install/: ubuntu_install_conda.sh  ubuntu_install_core.sh
include/: dlpack.h
python/: capsule_api.py  dlpack_op.py  setup.py
python/tfdlpack/: __init__.py  capsule_api.py  core.py  libinfo.py
src/: capsule_destructor.cc  dlpack_op.cc  from_dlpack_kernel.cc  from_dlpack_kernel_copy.cc  get_device_and_dtype_kernel.cc  to_dlpack_kernel.cc  to_dlpack_op.cc  util.cc  util.h
test/: t.py  test_from_dlpack.py  test_get_device.py  test_to_dlpack.py  test_zero_copy.py
test/scripts/: lint.py  task_lint.sh
tests/: test_from_dlpack.py  test_to_dlpack.py  test_zero_copy.py
tests/scripts/: .gitignore  README.md  build.sh  build_in_docker.sh  build_release.sh  task_build.sh  task_lint_cpp.sh  task_lint_python.sh
